// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-blockquote> component <bolt-blockquote> align variations: center 1`] = `
<bolt-blockquote align-items="center">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-center c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> align variations: left 1`] = `
<bolt-blockquote align-items="left">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> align variations: right 1`] = `
<bolt-blockquote align-items="right">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-end c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> basic usage 1`] = `
<bolt-blockquote>
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> basic usage w/ author 1`] = `
<bolt-blockquote>
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations with inset: horizontal 1`] = `
<bolt-blockquote border="horizontal">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-horizontal">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations with inset: none 1`] = `
<bolt-blockquote border="none">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--borderless">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations with inset: vertical 1`] = `
<bolt-blockquote border="vertical">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations: horizontal 1`] = `
<bolt-blockquote border="horizontal">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-horizontal">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations: none 1`] = `
<bolt-blockquote border="none">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--borderless">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations: vertical 1`] = `
<bolt-blockquote border="vertical">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> indent usage 1`] = `
<bolt-blockquote indent>
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical c-bolt-blockquote--indented">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> size variations: large 1`] = `
<bolt-blockquote size="large">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--large c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> size variations: xlarge 1`] = `
<bolt-blockquote size="xlarge">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> size variations: xxlarge 1`] = `
<bolt-blockquote size="xxlarge">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xxlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component advanced <bolt-blockquote> usage 1`] = `
<bolt-blockquote border="horizontal">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-horizontal">
    <ssr-keep for="bolt-blockquote"
              class="c-bolt-blockquote__logo"
    >
      <bolt-logo slot="logo"
                 class="c-bolt-logo--invert"
      >
        <bolt-image slot="logo"
                    src="/fixtures/paypal.svg"
                    srcset="/fixtures/paypal.svg"
                    sizes="auto"
                    ratio="124/33"
                    placeholder-color="hsl(233, 33%, 97%)"
                    placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
        >
          <bolt-ratio ratio="124/33">
            <ssr-keep for="bolt-ratio"
                      class="c-bolt-ratio"
                      style="padding-bottom: calc((33 / 124) * 100%); --aspect-ratio: 3.7575757575758;"
            >
              <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade js-lazyload"
                   data-srcset="/fixtures/paypal.svg"
                   data-sizes="auto"
                   srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                   src="/fixtures/paypal.svg"
              >
              <noscript>
                <img class="c-bolt-image__image"
                     src="/fixtures/paypal.svg"
                     srcset="/fixtures/paypal.svg"
                >
              </noscript>
            </ssr-keep>
          </bolt-ratio>
        </bolt-image>
      </bolt-logo>
    </ssr-keep>
    <div class="c-bolt-blockquote__quote c-bolt-blockquote__quote--xlarge c-bolt-blockquote__quote--semibold">
      <ssr-keep for="bolt-blockquote">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </ssr-keep>
    </div>
    <footer class="c-bolt-blockquote__footer">
      <div class="c-bolt-blockquote__footer-item">
        <div class="c-bolt-blockquote__image">
          <ssr-keep for="bolt-blockquote">
            <bolt-image slot="author-image"
                        src="/fixtures/author.jpg"
                        srcset="/fixtures/author-50.jpg 50w, /fixtures/author-100.jpg 100w, /fixtures/author-200.jpg 200w, /fixtures/author-320.jpg 320w, /fixtures/author-480.jpg 480w, /fixtures/author.jpg 500w"
                        sizes="auto"
                        ratio="500/500"
                        placeholder-color="hsl(233, 33%, 97%)"
                        placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                        no-lazy
                        style="background-color: hsl(233, 33%, 97%);"
            >
              <bolt-ratio ratio="1/1">
                <ssr-keep for="bolt-ratio"
                          class="c-bolt-ratio"
                          style="padding-bottom: calc((1 / 1) * 100%); --aspect-ratio: 1;"
                >
                  <img class="c-bolt-image__image-placeholder"
                       sizes="auto"
                       src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  >
                  <img class="c-bolt-image__image"
                       srcset="/fixtures/author-50.jpg 50w, /fixtures/author-100.jpg 100w, /fixtures/author-200.jpg 200w, /fixtures/author-320.jpg 320w, /fixtures/author-480.jpg 480w, /fixtures/author.jpg 500w"
                       sizes="auto"
                       src="/fixtures/author.jpg"
                  >
                </ssr-keep>
              </bolt-ratio>
            </bolt-image>
          </ssr-keep>
        </div>
      </div>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-name"
              class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
        >
          Michelangelo di Lodovico Buonarroti Simoni
        </cite>
      </ssr-keep>
      <ssr-keep for="bolt-blockquote"
                class="c-bolt-blockquote__footer-item"
      >
        <cite slot="author-title"
              class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
        >
          Renaissance Artist
        </cite>
      </ssr-keep>
    </footer>
  </blockquote>
</bolt-blockquote>
`;
